tests/semantic/invalid/expected/duplicate_function.txt
semantic error: повторное объявление - идентификатор 'test' уже объявлен в этой области видимости
  --> tests/semantic/invalid/duplicate_function.src:5:4
   |
5 | fn test() -> int {
   |    ^
   |
   = идентификатор: 'test'
   = подсказка: переименуйте идентификатор или удалите предыдущее объявление

